force-app/main/default/objects/Course_Catalog__c/Course_Catalog__c.object-meta.xml
<CustomObject>
    <description>Used to store information related to the Courses and class Containing these courses.</description>
    <label>Course Catalog</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Course Catalog Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>