force-app/main/default/objects/Course_Catalog__c/fields/Course_Code__c.field-meta.xml
<CustomField>
    <fullName>Course_Code__c</fullName>
    <externalId>true</externalId>
    <label>Course Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>