force-app/main/default/objects/Course_Catalog__c/fields/Course_Name__c.field-meta.xml
<CustomField>
    <fullName>Course_Name__c</fullName>
    <description>name of the course and no two courses having same Name.</description>
    <label>Course Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>