force-app/main/default/objects/Course_Catalog__c/fields/Course_Type__c.field-meta.xml
<CustomField>
    <fullName>Course_Type__c</fullName>
    <description>used to select the type of the course</description>
    <label>Course Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Learning Lab</fullName>
            </value>
            <value>
                <fullName>Onsite Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>