force-app/main/default/objects/Course_Catalog__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Contains more information about the course.</description>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>