force-app/main/default/objects/Course_Catalog__c/fields/Sumtotal_Import_Date__c.field-meta.xml
<CustomField>
    <fullName>Sumtotal_Import_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>It shows when the record is updated from the sum Total to sales force.</description>
    <label>Sumtotal Import Date</label>
    <type>DateTime</type>
</CustomField>