force-app/main/default/objects/Course_Catalog__c/recordTypes/PSA_Course_Catalog.recordType-meta.xml
<RecordType>
    <fullName>PSA_Course_Catalog</fullName>
    <active>true</active>
    <description>PSA course catalog</description>
    <label>PSA Course Catalog</label>
</RecordType>