force-app/main/default/objects/Course_Catalog__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NAME</columns>
    <columns>Course_Code__c</columns>
    <columns>Course_Name__c</columns>
    <columns>Course_Type__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Sumtotal_Import_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>